--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,11 @@
             <artifactId>commons-pool2</artifactId>
             <version>${commons-pool2.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.futunn.openapi</groupId>
+            <artifactId>futu-api</artifactId>
+            <version>5.8.2008</version>
+        </dependency>
         <!--    grpc模块 依赖    -->
         <dependency>
             <groupId>io.vertx</groupId>
