--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <jetty.alpnAgent.version>2.0.7</jetty.alpnAgent.version>
         <commons-pool2.version>2.9.0</commons-pool2.version>
         <log4j.version>2.14.0</log4j.version>
+        <protobuf.version>3.17.3</protobuf.version>
         <jetty.alpnAgent.path>
             ${settings.localRepository}/org/mortbay/jetty/alpn/jetty-alpn-agent/${jetty.alpnAgent.version}/jetty-alpn-agent-${jetty.alpnAgent.version}.jar
         </jetty.alpnAgent.path>
@@ -104,6 +105,17 @@
             <artifactId>jetty-alpn-agent</artifactId>
             <version>${jetty.alpnAgent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>${protobuf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>${protobuf.version}</version>
+        </dependency>
+
         <!--    grpc模块 依赖    -->
 
         <!--测试-->
