sql相关依赖引入

--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,15 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-web-proxy</artifactId>
+            <artifactId>vertx-json-schema</artifactId>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-json-schema</artifactId>
+            <artifactId>vertx-pg-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-sql-client-templates</artifactId>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
