数据访问层初始化

--- a/conf/config.json
+++ b/conf/config.json
@@ -4,6 +4,36 @@
     "path": "",
     "host": "0.0.0.0"
   },
-  "db": {
+  "readOnly": {
+    "pg": {
+      "host": "",
+      "port": 0,
+      "db": "",
+      "user": "",
+      "password": "",
+      "pool": {
+        "maxSize": 4,
+        "maxWaitQueueSize": -1,
+        "idleTimeout": 0,
+        "poolCleanerPeriod": 1000,
+        "connectionTimeout": 30
+      }
+    }
+  },
+  "readWrite": {
+    "pg": {
+      "host": "",
+      "port": 0,
+      "db": "",
+      "user": "",
+      "password": "",
+      "pool": {
+        "maxSize": 4,
+        "maxWaitQueueSize": -1,
+        "idleTimeout": 0,
+        "poolCleanerPeriod": 1000,
+        "connectionTimeout": 30
+      }
+    }
   }
 }
