--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <skip>true</skip>
                     <argLine>-javaagent:${jetty.alpnAgent.path}</argLine>
                 </configuration>
             </plugin>
