--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>futu-api</artifactId>
             <version>5.8.2008</version>
         </dependency>
+        <dependency>
+            <groupId>com.ongres.scram</groupId>
+            <artifactId>client</artifactId>
+            <version>2.1</version>
+        </dependency>
         <!--    grpc模块 依赖    -->
         <dependency>
             <groupId>io.vertx</groupId>
