与futu集成板块信息入库

--- a/src/main/resources/db-queries.properties
+++ b/src/main/resources/db-queries.properties
@@ -1,1 +1,1 @@
-INSET_ONE_PLATE=INSERT INTO t_plate(plate, plate_name, plate_type) VALUES (#{plate},#{name},#{type})
+INSET_ONE_PLATE=INSERT INTO t_plate(plate_name, plate_type, market, code) VALUES (#{name},#{type},#{market},#{code})
