与futu集成-股票信息入库

--- a/src/main/resources/db-queries.properties
+++ b/src/main/resources/db-queries.properties
@@ -1,1 +1,2 @@
 INSET_ONE_PLATE=INSERT INTO t_plate(plate_name, plate_type, market, code) VALUES (#{name},#{type},#{market},#{code})
+INSET_ONE_SECURITY=INSERT INTO t_security(name, lot_size, sec_type, list_time, de_listing,exchange_type, identity, market, code) VALUES (#{name},#{lotSize},#{secType},#{listTime},#{deListing},#{exchangeType},#{identity},#{market},#{code})
