--- a/quantx-collect/src/main/resources/application.properties
+++ b/quantx-collect/src/main/resources/application.properties
@@ -5,8 +5,8 @@ quarkus.hibernate-orm.multitenant=SCHEMA
 # schema config
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
-quarkus.datasource.password=983528987fuck.
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quantx
+quarkus.datasource.password=postgrespw
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:49153/quantx
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 quarkus.flyway.schemas=admin,user1
