--- a/quantx-collect/src/main/resources/application.properties
+++ b/quantx-collect/src/main/resources/application.properties
@@ -11,8 +11,5 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quantx
 #quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:49153/quantx
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
-#flyway config
-#quarkus.flyway.schemas=admin,user1
-#quarkus.flyway.locations=schema
-#quarkus.flyway.migrate-at-start=true
+# liquibase config
 quarkus.liquibase.migrate-at-start=true
