--- a/quantx-collect/src/main/resources/application.properties
+++ b/quantx-collect/src/main/resources/application.properties
@@ -2,6 +2,7 @@ quarkus.log.level=INFO
 # hibernate orm config
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.multitenant=SCHEMA
+quarkus.hibernate-orm.log.sql=true
 # schema config
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
