liquibase wrap by myself using jdbc since quarkus hibernate-reactive not supported

--- a/quantx-collect/src/main/resources/application.properties
+++ b/quantx-collect/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 quarkus.log.level=INFO
+# test config
+quarkus.http.test-port=8083
 # hibernate orm config
 quarkus.hibernate-orm.database.generation=none
-quarkus.hibernate-orm.multitenant=SCHEMA
 quarkus.hibernate-orm.log.sql=true
 # schema config
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
-quarkus.datasource.password=983528987fuck.
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quantx
+quarkus.datasource.password=postgres
+quarkus.datasource.reactive.url=vertx-reactive:postgresql://postgres:postgres@localhost:5432/quantx
+quarkus.datasource.jdbc=false
+#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quantx
 #quarkus.datasource.password=postgrespw
 #quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:49153/quantx
-quarkus.datasource.jdbc.max-size=8
-quarkus.datasource.jdbc.min-size=2
+#quarkus.datasource.jdbc.max-size=8
+#quarkus.datasource.jdbc.min-size=2
 # liquibase config
 quarkus.liquibase.migrate-at-start=true
