liquibase wrap by myself using jdbc since quarkus hibernate-reactive not supported

--- a/quantx-collect/src/main/resources/application.properties
+++ b/quantx-collect/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
-quarkus.datasource.reactive.url=vertx-reactive:postgresql://postgres:postgres@localhost:5432/quantx
+quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/quantx
 quarkus.datasource.jdbc=false
 #quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quantx
 #quarkus.datasource.password=postgrespw
