--- a/quantx-collect/pom.xml
+++ b/quantx-collect/pom.xml
@@ -73,7 +73,11 @@
             <artifactId>futu-api</artifactId>
             <version>6.2.2708</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>3.5.1</version>
+        </dependency>
         <!-- Testing -->
         <dependency>
             <groupId>io.quarkus</groupId>
