--- a/quantx-collect/src/main/resources/application.properties
+++ b/quantx-collect/src/main/resources/application.properties
@@ -7,10 +7,10 @@ quarkus.hibernate-orm.log.sql=true
 # schema config
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
-#quarkus.datasource.password=postgrespw
-quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/quantx
-#quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:49153/quantx
+#quarkus.datasource.password=postgres
+quarkus.datasource.password=postgrespw
+#quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/quantx
+quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:49153/quantx
 quarkus.datasource.jdbc=false
 # liquibase config
 quarkus.liquibase.migrate-at-start=true
@@ -18,3 +18,4 @@ quarkus.liquibase.migrate-at-start=true
 futu.gateway.address=127.0.0.1
 futu.gateway.pwd=11111
 futu.gateway.encrypt=false
+futu.insert.batch-size=30
