--- a/rocketmq-to-ck/src/main/resources/application-dev.yml
+++ b/rocketmq-to-ck/src/main/resources/application-dev.yml
@@ -1,7 +1,8 @@
 rocketmq:
-  name-server: 172.24.239.243:9876
+  name-server: 192.168.21.45:9876
 ck:
-  url: jdbc:ch://172.24.239.243:8123/quantx
+  driverClass: com.clickhouse.jdbc.ClickHouseDriver
+  url: jdbc:ch://192.168.21.45:8123/quantx
   user: default
   password: 123456
 server:
