--- a/futu-service/src/main/resources/application-dev.yml
+++ b/futu-service/src/main/resources/application-dev.yml
@@ -7,10 +7,16 @@ spring:
     password: 123456
   liquibase:
     change-log: classpath:db/liquibase-changelog.xml
-rocketmq:
-  name-server: 172.27.133.93:9876
-  producer:
-    group: ft-rt-producer
+  kafka:
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      retries: 5
+      bootstrap-servers: 172.20.105.219:9092
+#rocketmq:
+#  name-server: 172.20.105.219:9876
+#  producer:
+#    group: ft-rt-producer
 ft:
   url: 127.0.0.1
   port: 11111
