--- a/rocketmq-to-ck/src/main/resources/application-dev.yml
+++ b/rocketmq-to-ck/src/main/resources/application-dev.yml
@@ -1,19 +1,33 @@
 ck:
   driverClass: com.clickhouse.jdbc.ClickHouseDriver
-  url: jdbc:ch://172.20.105.219:8123/quantx
+  url: jdbc:ch://172.28.253.8:8123/quantx
   user: default
   password: 123456
 spring:
   kafka:
+    streams:
+      application-id: quantx-streams
+      properties:
+        default:
+          key:
+            serde: org.apache.kafka.common.serialization.Serdes$StringSerde
+          value:
+            serde: org.springframework.kafka.support.serializer.JsonSerde
+          timestamp:
+            extractor: org.apache.kafka.streams.processor.WallclockTimestampExtractor
+        spring:
+          json:
+            trusted:
+              packages: '*'
+    listener:
+      type: batch
+    bootstrap-servers: 172.28.253.8:9092
     consumer:
+      max-poll-records: 500
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      bootstrap-servers: 172.20.105.219:9092
       properties:
         spring:
           json:
             trusted:
               packages: '*'
-      max-poll-records: 500
-    listener:
-      type: batch
