--- a/flink-rt-service/src/main/resources/base_config.properties
+++ b/flink-rt-service/src/main/resources/base_config.properties
@@ -8,6 +8,5 @@ ck.driverName=com.clickhouse.jdbc.ClickHouseDriver
 ck.username=default
 ck.pwd=123456
 ck.url=jdbc:ch://172.27.205.147:8123/quantx
-#rocketmq
-rocketmq.nameserver=172.25.11.18:9876
-
+#kafka
+kafka.bootstrapServers=172.25.160.223:9092
