--- a/rocketmq-to-ck/src/main/resources/application-dev.yml
+++ b/rocketmq-to-ck/src/main/resources/application-dev.yml
@@ -1,33 +1,26 @@
 ck:
   driverClass: com.clickhouse.jdbc.ClickHouseDriver
-  url: jdbc:ch://172.28.253.8:8123/quantx
+  url: jdbc:ch://172.25.160.223:8123/quantx
   user: default
   password: 123456
 spring:
   kafka:
-    streams:
-      application-id: quantx-streams
-      properties:
-        default:
-          key:
-            serde: org.apache.kafka.common.serialization.Serdes$StringSerde
-          value:
-            serde: org.springframework.kafka.support.serializer.JsonSerde
-          timestamp:
-            extractor: org.apache.kafka.streams.processor.WallclockTimestampExtractor
-        spring:
-          json:
-            trusted:
-              packages: '*'
     listener:
       type: batch
-    bootstrap-servers: 172.28.253.8:9092
+    bootstrap-servers: 172.25.160.223:9092
     consumer:
       max-poll-records: 500
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       properties:
         spring:
+          deserializer:
+            key:
+              delegate:
+                class: org.apache.kafka.common.serialization.StringDeserializer
+            value:
+              delegate:
+                class: org.springframework.kafka.support.serializer.JsonDeserializer
           json:
             trusted:
               packages: '*'
