--- a/futu-service/src/main/resources/application-dev.yml
+++ b/futu-service/src/main/resources/application-dev.yml
@@ -8,11 +8,27 @@ spring:
   liquibase:
     change-log: classpath:db/liquibase-changelog.xml
   kafka:
+    bootstrap-servers: 172.20.66.184:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       retries: 5
-      bootstrap-servers: 172.22.27.7:9092
+    consumer:
+      max-poll-records: 500
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring:
+          deserializer:
+            key:
+              delegate:
+                class: org.apache.kafka.common.serialization.StringDeserializer
+            value:
+              delegate:
+                class: org.apache.kafka.common.serialization.StringDeserializer
+          json:
+            trusted:
+              packages: '*'
 ft:
   url: 127.0.0.1
   port: 11111
