邮箱密码安全修复

--- a/futu-service/src/main/resources/application-dev.yml
+++ b/futu-service/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     host: smtp.qq.com
     port: 465
     username: 983528987@qq.com
-    password: oegcduscilenbece
+    password: ${email.password}
     protocol: smtp
     properties:
       mail:
