kdj数据清洗和查询

--- a/analyze-service/pom.xml
+++ b/analyze-service/pom.xml
@@ -61,21 +61,61 @@
             <!-- use uber jar with all dependencies included, change classifier to http for smaller jar -->
             <classifier>all</classifier>
         </dependency>
-        <dependency>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-core</artifactId>
-            <version>8.41.0.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-compiler</artifactId>
-            <version>8.41.0.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-mvel</artifactId>
-            <version>8.41.0.Final</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-basics</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-collect</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-product</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-data</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-calc</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-pricer</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-market</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-math</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-loader</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-measure</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.opengamma.strata</groupId>-->
+        <!--            <artifactId>strata-report</artifactId>-->
+        <!--            <version>2.12.54</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
