--- a/3rd-akshares-service/src/main/resources/application-dev.yml
+++ b/3rd-akshares-service/src/main/resources/application-dev.yml
@@ -1,13 +1,12 @@
-ck:
-  driverClass: com.clickhouse.jdbc.ClickHouseDriver
-  url: jdbc:ch://172.31.127.144:8123/quantx
-  user: default
-  password: 123456
+server:
+  port: 9093
 spring:
   kafka:
-    listener:
-      type: batch
     bootstrap-servers: 172.31.127.144:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      retries: 5
     consumer:
       max-poll-records: 500
       key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
@@ -20,7 +19,7 @@ spring:
                 class: org.apache.kafka.common.serialization.StringDeserializer
             value:
               delegate:
-                class: org.springframework.kafka.support.serializer.JsonDeserializer
+                class: org.apache.kafka.common.serialization.StringDeserializer
           json:
             trusted:
               packages: '*'
