--- a/rocketmq-to-ck/src/main/resources/application-dev.yml
+++ b/rocketmq-to-ck/src/main/resources/application-dev.yml
@@ -1,26 +1,14 @@
 ck:
   driverClass: com.clickhouse.jdbc.ClickHouseDriver
-  url: jdbc:ch://172.31.0.156:8123/quantx
+  url: jdbc:ch://172.31.10.120:8123/quantx
   user: default
   password: 123456
 spring:
   kafka:
     listener:
       type: batch
-    bootstrap-servers: 172.31.0.156:9092
+    bootstrap-servers: 172.31.10.120:9092
     consumer:
       max-poll-records: 500
-      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-      properties:
-        spring:
-          deserializer:
-            key:
-              delegate:
-                class: org.apache.kafka.common.serialization.StringDeserializer
-            value:
-              delegate:
-                class: org.springframework.kafka.support.serializer.JsonDeserializer
-          json:
-            trusted:
-              packages: '*'
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
