--- a/analyze-service/pom.xml
+++ b/analyze-service/pom.xml
@@ -57,9 +57,8 @@
         <dependency>
             <groupId>com.clickhouse</groupId>
             <artifactId>clickhouse-jdbc</artifactId>
-            <version>0.4.6</version>
-            <!-- use uber jar with all dependencies included, change classifier to http for smaller jar -->
-            <classifier>all</classifier>
+            <version>0.8.2</version>
+            <classifier>shaded-all</classifier>
         </dependency>
         <!--        <dependency>-->
         <!--            <groupId>com.opengamma.strata</groupId>-->
