ck jdbc upgrade

--- a/rocketmq-to-ck/pom.xml
+++ b/rocketmq-to-ck/pom.xml
@@ -19,6 +19,18 @@
         <relativePath/>
     </parent>
     <dependencies>
+        <!-- SLF4J API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version> <!-- 使用最新的版本 -->
+        </dependency>
+        <!-- Logback Classic 实现 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version> <!-- 使用最新的版本 -->
+        </dependency>
         <dependency>
             <groupId>io.futakotome</groupId>
             <artifactId>quant-common</artifactId>
@@ -45,9 +57,8 @@
         <dependency>
             <groupId>com.clickhouse</groupId>
             <artifactId>clickhouse-jdbc</artifactId>
-            <version>0.4.6</version>
-            <!-- use uber jar with all dependencies included, change classifier to http for smaller jar -->
-            <classifier>all</classifier>
+            <version>0.8.2</version>
+            <classifier>shaded-all</classifier>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
