--- a/analyze-service/pom.xml
+++ b/analyze-service/pom.xml
@@ -18,6 +18,25 @@
         <version>2.7.10</version>
         <relativePath/>
     </parent>
+    <profiles>
+        <profile>
+            <!--            本地开发环境-->
+            <id>dev</id>
+            <properties>
+                <profileActive>dev</profileActive>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!--        测试环境-->
+        <profile>
+            <id>test</id>
+            <properties>
+                <profileActive>test</profileActive>
+            </properties>
+        </profile>
+    </profiles>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
