--- a/futu-service/src/main/resources/application-dev.yml
+++ b/futu-service/src/main/resources/application-dev.yml
@@ -14,13 +14,13 @@ spring:
           starttls.enable: true
           ssl.enable: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/quantx_3rd_futu
+    url: jdbc:postgresql://172.25.61.237:5432/quantx_3rd_futu
     username: postgres
     password: 123456
   liquibase:
     change-log: classpath:db/liquibase-changelog.xml
   kafka:
-    bootstrap-servers: 172.18.118.100:9092
+    bootstrap-servers: 172.25.61.237:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
